# kgua

./: .gitignore  .pre-commit-config.yaml  .~lock.TT.docx#  .~lock.TT.odt#  Dockerfile  README.md  TT.docx  TT.odt  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt
.circleci/: config.yml  deploy.sh
apps/authorization/: admin.py  apps.py  email.py  managers.py  mixins.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
apps/bureau/: admin.py  apps.py  models.py  serializers.py  translation.py  urls.py  views.py
apps/charity/: admin.py  models.py  serializers.py  translation.py  urls.py  views.py
apps/clubs/: admin.py  apps.py  models.py  serializers.py  translation.py  urls.py  views.py
apps/department/: admin.py  apps.py  models.py  serializers.py  translation.py  urls.py  views.py
apps/documents/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/event/: admin.py  apps.py  models.py  serializers.py  translation.py  urls.py  views.py
apps/international_cooperation/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/international_event/: admin.py  apps.py  models.py  serializers.py  translation.py  urls.py  views.py
apps/jubilee/: admin.py  apps.py  models.py  serializers.py  translation.py  urls.py  views.py
apps/kgua_life/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/news/: admin.py  models.py  serializers.py  urls.py  (+2 more)
kgua/: asgi.py  settings.py  urls.py  wsgi.py
static/: admin_inline.css
utils/: admin.py  models.py  serializers.py
(+137 files in other folders)
